<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="#FFFFF"
    android:orientation="vertical">


<TextView
        android:id="@+id/textAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/InputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numPax" />

    <EditText
        android:id="@+id/InputNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/Svs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/svs"
            android:textOn="@string/svs"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ToggleButton
            android:id="@+id/Gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/gst"
            android:textOn="@string/gst" />
    </LinearLayout>
    <TextView
        android:id="@+id/Discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/InputDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="491dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="cash" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="paynow" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/split"
                android:textOn="@string/split"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ToggleButton
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/reset"
                android:textOn="@string/reset"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalbill" />

        <TextView
            android:id="@+id/personPays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EachPays" />
    </LinearLayout>
</LinearLayout>